--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,24 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="CommonBtn" >
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/common_btn_bg</item>
+        <item name="android:paddingTop">@dimen/common_btn_padding</item>
+        <item name="android:paddingBottom">@dimen/common_btn_padding</item>
+        <item name="android:paddingLeft">@dimen/common_btn_padding</item>
+        <item name="android:paddingStart">@dimen/common_btn_padding</item>
+    </style>
+    <style name="CommonEditText" >
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:background">@drawable/common_edittext_bg</item>
+        <item name="android:paddingTop">@dimen/common_edittext_padding</item>
+        <item name="android:paddingBottom">@dimen/common_edittext_padding</item>
+        <item name="android:paddingLeft">@dimen/common_edittext_padding</item>
+        <item name="android:paddingStart">@dimen/common_edittext_padding</item>
+    </style>
 
 </resources>
