--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -32,9 +32,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="8dp"
                 android:onClick="@{()-> viewModel.actionAddNewNote()}"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.887"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.887"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintHorizontal_bias="0.114" android:layout_marginEnd="16dp"
+                app:layout_constraintHorizontal_bias="0.114"
+                android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"/>
         <TextView
                 android:visibility="gone"
