--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<layout>-->
 <LinearLayout
         android:id="@+id/linearLayout"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,3 +21,5 @@
             />
 
 </LinearLayout>
+<!--
+</layout>-->
