--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".view.fragment.EditNoteFragment">
+<!--<layout>
+    <data>
+        <variable name="itemClickLister" type="com.android.notenavigation.ClickListenerHandler"/>
+    </data>-->
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".view.fragment.EditNoteFragment">
 
 
     <EditText
@@ -28,3 +33,5 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
+<!--
+</layout>-->
