--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        android:id="@+id/linearLayout"
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".view.activity.MainActivity">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable name="viewModel" type="com.android.notenavigation.viewmodel.NoteListViewModel"/>
+    </data>
+    <LinearLayout
 
-    <fragment
-            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:navGraph="@navigation/note_navigation"
-            app:defaultNavHost="true"
-            android:id="@+id/nav_host_fragment"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            android:orientation="vertical"
+            tools:context=".view.activity.MainActivity">
 
-</LinearLayout>
+        <fragment
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navGraph="@navigation/note_navigation"
+                app:defaultNavHost="true"
+                android:id="@+id/nav_host_fragment"
+                app:layout_constraintStart_toStartOf="parent"
+        />
+
+    </LinearLayout>
+</layout>
