--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -1,38 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp"
-        tools:context=".view.fragment.AddNoteFragment">
+<layout>
+    <data>
+        <variable name="viewModel" type="com.android.notenavigation.viewmodel.AddNoteViewModel"/>
+        <variable name="navDirection" type="androidx.navigation.NavDirections"/>
+    </data>
 
-    <EditText
-            android:id="@+id/edTitle"
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter text"
-            android:padding="@dimen/common_edittext_padding"
-            android:background="@drawable/common_edittext_bg"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"/>
-    <Button
-            android:id="@+id/btnSaveNote"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save Note"
-            style="@style/CommonBtn"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/edTitle"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp"
+            tools:context=".view.fragment.AddNoteFragment">
 
-</android.support.constraint.ConstraintLayout>
+        <EditText
+                android:id="@+id/edTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Enter text"
+                android:padding="@dimen/common_edittext_padding"
+                android:text="@={viewModel.title}"
+                android:background="@drawable/common_edittext_bg"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/btnSaveNote"/>
+        <Button
+                android:id="@+id/btnSaveNote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save Note"
+                android:onClick="@{()->viewModel.addNote()}"
+                style="@style/CommonBtn"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/edTitle"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"/>
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
