--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".view.fragment.EditNoteFragment">
+<layout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="viewModel" type="com.android.notenavigation.viewmodel.EditNoteViewModel"/>
+    </data>
 
+    <android.support.constraint.ConstraintLayout
 
-    <EditText
-            android:id="@+id/ed_update_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/CommonEditText"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
-    <Button
-            android:id="@+id/btUpdate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/CommonBtn"
-            android:text="Edit Title"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/ed_update_text" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".view.fragment.EditNoteFragment">
 
-</android.support.constraint.ConstraintLayout>
+
+        <EditText
+                android:id="@+id/ed_update_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/CommonEditText"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+        <Button
+                android:id="@+id/btUpdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/CommonBtn"
+                android:text="Edit Title"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/ed_update_text" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
