--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
->
-    <TextView
-            android:padding="10dp"
-            android:id="@+id/tvNumber"
-            android:layout_width="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="note" type="com.android.notenavigation.db.Note1"/>
+    </data>
+
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="1"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-    />
+            android:orientation="horizontal">
+        <TextView
+                android:padding="10dp"
+                android:id="@+id/tvNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="@{Integer.toString(note.id)}"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+        />
 
-    <TextView
-            android:padding="10dp"
-            android:id="@+id/tvTitle"
-            android:layout_width="344dp"
-            android:layout_height="0dp"
-            android:textSize="18sp"
-            android:text="@string/hello_blank_fragment"
-            app:layout_constraintTop_toTopOf="@+id/tvNumber"
-            app:layout_constraintBottom_toBottomOf="@+id/tvNumber"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            android:ellipsize="end"
-            tools:text="qqeeqwetyyyyuuuuuuuuuuuuuuuuuuuuuuuummmmmmmmmmmmmmmmmmm"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            android:layout_marginLeft="8dp"/>
-    <android.support.constraint.Guideline
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:id="@+id/guideline" app:layout_constraintGuide_begin="59dp"
-            android:orientation="vertical"/>
+        <TextView
+                android:padding="10dp"
+                android:id="@+id/tvTitle"
+                android:layout_width="344dp"
+                android:layout_height="0dp"
+                android:textSize="18sp"
+                android:text="@{note.title}"
+                app:layout_constraintTop_toTopOf="@+id/tvNumber"
+                app:layout_constraintBottom_toBottomOf="@+id/tvNumber"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                android:ellipsize="end"
+                tools:text="qqeeqwetyyyyuuuuuuuuuuuuuuuuuuuuuuuummmmmmmmmmmmmmmmmmm"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                android:layout_marginLeft="8dp"/>
+        <android.support.constraint.Guideline
+                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/guideline" app:layout_constraintGuide_begin="59dp"
+                android:orientation="vertical"/>
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
