finish data binding

--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -1,62 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp"
-        tools:context=".view.fragment.NoteDetailFragment">
-    <TextView
-            android:padding="8dp"
-            android:id="@+id/note_Id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="@string/hello_blank_fragment"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" tools:text="Note Number : 1"/>
-    <TextView
-            android:padding="8dp"
-            android:id="@+id/Title"
-            android:layout_below="@id/note_Id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/note_Id" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" tools:text="Note Title : Title"/>
-    <LinearLayout
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
-        <Button
-                android:id="@+id/btDeleteNote"
-                android:layout_height="wrap_content"
-                style="@style/CommonBtn"
-                android:text="Delete Note"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="3dp"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-        />
-        <Button
-                android:id="@+id/btEditNote"
-                style="@style/CommonBtn"
-                android:text="Edit Note"
-                android:layout_weight="1"
-                android:layout_marginLeft="3dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="viewModel" type="com.android.notenavigation.viewmodel.NoteDetailViewModel"/>
+        <variable name="navDirection" type="androidx.navigation.NavDirections"/>
+    </data>
 
-    </LinearLayout>
+    <android.support.constraint.ConstraintLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp"
+            tools:context=".view.fragment.NoteDetailFragment">
+        <TextView
+                android:padding="8dp"
+                android:id="@+id/note_Id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="@{Integer.toString(viewModel.noteId)}"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp" tools:text="Note Number : 1"/>
+        <TextView
+                android:padding="8dp"
+                android:id="@+id/Title"
+                android:layout_below="@id/note_Id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="@{viewModel.title}"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/note_Id" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" tools:text="Note Title : Title"/>
+        <LinearLayout
+                android:layout_alignParentBottom="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
+            <Button
+                    android:id="@+id/btDeleteNote"
+                    android:layout_height="wrap_content"
+                    style="@style/CommonBtn"
+                    android:onClick="@{()-> viewModel.deleteNote()}"
+                    android:text="Delete Note"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+            />
+            <Button
+                    android:id="@+id/btEditNote"
+                    style="@style/CommonBtn"
+                    android:text="Edit Note"
+                    android:onClick="@{()->viewModel.setDestination(navDirection.actionId)}"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="3dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"/>
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
+</layout>
