--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -5,6 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable name="viewModel" type="com.android.notenavigation.viewmodel.EditNoteViewModel"/>
+        <variable name="navDirection" type="androidx.navigation.NavDirections"/>
+        <variable name="id" type="Integer"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -20,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/CommonEditText"
+                android:text="@={viewModel.title}"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/CommonBtn"
+                android:onClick="@{()-> viewModel.editNote(id)}"
                 android:text="Edit Title"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/ed_update_text" app:layout_constraintStart_toStartOf="parent"
