--- a/app/src/main/res/navigation/note_navigation.xml
+++ b/app/src/main/res/navigation/note_navigation.xml
@@ -54,7 +54,8 @@
             android:id="@+id/addNoteFragment"
             android:name="com.android.notenavigation.view.fragment.AddNoteFragment"
             android:label="Add Note"
-            tools:layout="@layout/fragment_add_note"/>
+            tools:layout="@layout/fragment_add_note">
+    </fragment>
     <fragment
             android:id="@+id/editNoteFragment"
             android:name="com.android.notenavigation.view.fragment.EditNoteFragment"
